feat: email sender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=notifications
+spring.data.mongodb.uri=${MONGO_URI}
+spring.data.mongodb.database=notifications
+mail.smtp.auth=true
+mail.smtp.starttls=${MAIL_STARTTLS:true}
+mail.smtp.username=${MAIL_USERNAME}
+mail.smtp.password=${MAIL_PASSWORD}
+mail.smtp.host=${MAIL_HOST}
+mail.smtp.port=${MAIL_PORT}
