--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 spring.application.name=notifications
 spring.data.mongodb.uri=${MONGO_URI}
-spring.data.mongodb.database=notifications
+spring.data.mongodb.database=membrou
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
 mail.smtp.auth=true
 mail.smtp.starttls=${MAIL_STARTTLS:true}
 mail.smtp.username=${MAIL_USERNAME}
 mail.smtp.password=${MAIL_PASSWORD}
 mail.smtp.host=${MAIL_HOST}
 mail.smtp.port=${MAIL_PORT}
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=notification-sender
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.membrou.notifications.messaging.kafka.dto
+auto.create.topics.enable=true
