(refactor): add new notification sender and apply strategy pattern

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ mail.smtp.password=${MAIL_PASSWORD}
 mail.smtp.host=${MAIL_HOST}
 mail.smtp.port=${MAIL_PORT}
 
+whatsapp.membrou.host=${WHATSAPP_MESSAGE_URL}
+whatsapp.membrou.token=${WHATSAPP_MESSAGE_API_KEY}
+
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=notification-sender
 spring.kafka.consumer.auto-offset-reset=earliest
