--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build: .
     ports:
       - "8080:8080"
-    environment:
-      - JAVA_OPTS=
+    env_file:
+      - .env
     networks:
       - app-network
 
