fix: removing kafka host in properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ mail.smtp.port=${MAIL_PORT}
 whatsapp.membrou.host=${WHATSAPP_MESSAGE_URL}
 whatsapp.membrou.token=${WHATSAPP_MESSAGE_API_KEY}
 
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=${KAFKA_HOST}
 spring.kafka.consumer.group-id=notification-sender
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
