--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=com.membrou.notifications.messaging.kafka.dto
 auto.create.topics.enable=true
+
+sentry.dsn=https://b0ee648a73d9d6c3524c15559fbfe1ad@o4509515679727616.ingest.us.sentry.io/4509675154112512
+sentry.send-default-pii=true
